# QmlSampleEditor

./: .gitignore  CMakeLists.txt  QMLQuickDemo.json.in  README.md  qmleditor.cpp  qmleditor.h  qmlhighlighter.cpp  qmlhighlighter.h  qmlquickdemo.cpp  qmlquickdemoconstants.h  qmlquickdemotr.h  quickqmltester.cpp  quickqmltester.h  quickqmltester.ui
.github/workflows/: build_cmake.yml
assets/: Data.json  blackandwhite.frag  blackandwhite.vert  pixelize.frag  pixelize.vert
assets/qmlexamples/: 01_anchor_animation.qml  02_anchor_changes.qml  03_animated_image.qml  04_animated_sprite.qml  05_animated_easing_type.qml  06_rotation_animation.qml  07_sequential_animation.qml  08_game_01.qml  09_game_02.qml  10_blend_image.qml  11_brightness_and_conrtast.qml  12_json_model.qml  13_listmodel.qml  14_binding.qml  15_canvas.qml  16_gridlayout.qml  17_repeater.qml  18_search.qml  19_taphandler.qml  20_text_format.qml  21_shader_effect_pixelated.qml  22_shader_effect.qml  23_footer.qml  24_push.qml  25_simplechat.qml  file.txt
